image size changed to 126px * 126px

--- a/WebApp/Views/Consultation/PartialViewDetail.cshtml
+++ b/WebApp/Views/Consultation/PartialViewDetail.cshtml
@@ -104,7 +104,7 @@
     <div class="modal-body text-left">
         <div style="color: #375781;width: 250px;">
             <div class="img-1">
-                <img src="@(Model.DoctorVM.ProfilePhotoBase64)" alt="" class="m-b-10 img-responsive">
+                <img style="width:126px;height:126px" src="@(Model.DoctorVM.ProfilePhotoBase64)" alt="" class="m-b-10 img-responsive">
             </div>
             <div class="name-sec">
                 <h2>@doctorName</h2>
