--- a/WebApp/Views/DoctorProfile/Profile.cshtml
+++ b/WebApp/Views/DoctorProfile/Profile.cshtml
@@ -30,7 +30,7 @@
                             <div class="dr_info w-bg box-s">
                                 <div class="map-box">
                                     <div class="box-inner">
-                                        <img src="@Model.ProfilePhotoBase64" alt="" class="m-b-10 img-circle img-responsive">
+                                        <img style="width:126px;height:126px" src="@Model.ProfilePhotoBase64" alt="" class="m-b-10 img-circle img-responsive">
                                     </div>
 
                                     <h2 class="text-center">@Model.FirstName @Model.LastName <br> <small style="color: #73879C;">(@Model.GetAge())</small></h2>
