--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -116,7 +116,7 @@
                     <div class="profile m-b-60">
                         <div class="profile_pic">
                             <a href="@Url.Action("Profile","DoctorProfile")">
-                                <img src="@SessionHandler.ProfilePhoto" alt="..." class="img-circle profile_img">
+                                <img style="width:56px;height:56px" src="@SessionHandler.ProfilePhoto" alt="..." class="img-circle profile_img">
                             </a>
                         </div>
                         <div class="profile_info" style="word-break:break-word">
