--- a/WebApp/Views/Appointment/PartialViewDetail.cshtml
+++ b/WebApp/Views/Appointment/PartialViewDetail.cshtml
@@ -143,7 +143,7 @@
     <div class="modal-body text-left">
         <div class="user-detail">
             <div class="img-1">
-                <img src="@Model.DoctorVM.ProfilePhotoBase64" alt="" class="m-b-10 img-responsive">
+                <img style="width:126px;height:126px" src="@Model.DoctorVM.ProfilePhotoBase64" alt="" class="m-b-10 img-responsive">
             </div>
             <div class="name-sec">
                 <h2>@doctorName</h2>
