--- a/WebApp/Views/SeeDoctor/DoctorProfileView.cshtml
+++ b/WebApp/Views/SeeDoctor/DoctorProfileView.cshtml
@@ -20,7 +20,7 @@
                                 <div class="dr_info w-bg box-s">
                                     <div class="map-box">
                                         <div class="box-inner">
-                                            <img src="@Model.ProfilePhotoBase64" alt="" class="m-b-10 img-circle img-responsive">
+                                            <img style="width:126px;height:126px" src="@Model.ProfilePhotoBase64" alt="" class="m-b-10 img-circle img-responsive">
                                         </div>
                                         @if (Model.fav == 1)
                                         {
