--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -756,7 +756,7 @@
                 if ('@SessionHandler.UserInfo.timeZoneOffset' == '' ||
                     '@SessionHandler.UserInfo.timeZoneOffset' != new Date().getTimezoneOffset().toString())
                 {
-                    $.ajax({
+                    @*$.ajax({
                         url: '@Url.Action("UpdatePatientTimezone", "Appointment")',
                         type: "POST",
                         data: { 'offset': new Date().getTimezoneOffset().toString() },
@@ -790,28 +790,28 @@
                             //Stop displaying loader
                             hideLoader();
                         }
+                    });*@
+
+                    var param = "{}";
+                    var listitems;
+                    var $select = $('#myModal2').find('#Timezone');
+                    $.ajax({
+                        type: 'POST',
+                        url: '/Appointment/GetTimeZones',
+                        data: param,
+                        dataType: 'json',
+                        success: function (response) {
+                            $.each(response.Object, function (item) {
+                                listitems += '<option value=' + response.Object[item].zoneid + '>' + response.Object[item].timeZonee + '</option>';
+
+                            });
+                            $select.append(listitems);
+                        },
+                        error: errorRes
+
                     });
-
-                    //var param = "{}";
-                    //var listitems;
-                    //var $select = $('#myModal2').find('#Timezone');
-                    //$.ajax({
-                    //    type: 'POST',
-                    //    url: '/Appointment/GetTimeZones',
-                    //    data: param,
-                    //    dataType: 'json',
-                    //    success: function (response) {
-                    //        $.each(response.Object, function (item) {
-                    //            listitems += '<option value=' + response.Object[item].zoneid + '>' + response.Object[item].timeZonee + '</option>';
-
-                    //        });
-                    //        $select.append(listitems);
-                    //    },
-                    //    error: errorRes
-
-                    //});
-                    ////$('#myModal2').modal('show');
-                    //$('#myModal2').modal({ backdrop: 'static', keyboard: false });
+                    //$('#myModal2').modal('show');
+                    $('#myModal2').modal({ backdrop: 'static', keyboard: false });
                 }
 
             }
