--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -703,8 +703,15 @@
                 }
             }
             if ('@SessionHandler.ProfilePhoto' != '') {
+                var rightNow = new Date();
+                var jan1 = new Date(rightNow.getFullYear(), 0, 1, 0, 0, 0, 0);
+                var temp = jan1.toGMTString();
+                var jan2 = new Date(temp.substring(0, temp.lastIndexOf(" ") - 1));
+                var std_time_offset = (jan1 - jan2) / (1000 * 60 * 60);
+                std_time_offset = std_time_offset * (-60);
+                //alert(std_time_offset + ' ' + '@SessionHandler.UserInfo.timeZoneOffset');
                 if ('@SessionHandler.UserInfo.timeZoneOffset' == '' ||
-                    '@SessionHandler.UserInfo.timeZoneOffset' != new Date().getTimezoneOffset().toString())
+                    '@SessionHandler.UserInfo.timeZoneOffset' != std_time_offset.toString())
                 {
                     @*$.ajax({
                         url: '@Url.Action("UpdateDoctorTimezone", "DoctorAppointment")',
