special code for iOS compatibke VC committed , after correct impleemtnation on iOS side

--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -518,13 +518,13 @@
                     }
                     
                     //for iOS
-                    if (fromJson.status == 'tokbox') {
+                    @*if (fromJson.status == 'tokbox') {
                         //   alert('consultID recieved:' + fromJson.name);
                         localStorage.setItem('tokbox', fromJson.name);
                         if (tokboxInfo != '0')
                             window.location = '@Url.Action("Index","UserChat")?tokboxInfo=' + fromJson.name;  //Redirected doctor to call
                         else alert('Err in tokbox connection');
-                    }
+                    }*@
                     //end for iOS
                     var confirmCall;
                     if (fromJson.status == 'call') {
