--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -564,9 +564,10 @@
 
                             var tokboxInfo = oResp;
                             localStorage.setItem('tokbox', tokboxInfo);
-
+        
                             //for iOS
-                            chat.server.sendMessageToDoctor(
+        
+                            @*@*chat.server.sendMessageToDoctor(
                                        {
                                            SenderId: '@SessionHandler.UserInfo.Id',
                                            UserName: '@SessionHandler.UserInfo.Email',
@@ -575,7 +576,7 @@
                                            PatientName: '@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)',
                                            SenderType: 'Patient',
                                            Message: JSON.stringify({ status: 'tokbox', name: tokboxInfo })
-                                       });
+                                       });*@
                             //end for iOS
                             chat.server.patientRedirectedToCall
                                 (senderConnId, tokboxInfo, '@SessionHandler.UserInfo.Id', '@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)');
