--- a/WebApp/Views/PatientFiles/Index.cshtml
+++ b/WebApp/Views/PatientFiles/Index.cshtml
@@ -36,7 +36,7 @@
                                 <option value="">other</option>
                             </select>*@
                             <button id="btnUpload" type="button" class="btn btn-primary" aria-expanded="false">Upload</button>
-                            <p>Only , txt , pdf , docx , csv , jpg , png format are allowed</p>
+                            <p>Only jpg and png format are allowed</p>
                         </div>
                     </form>
                     <div id="divResultContainer" class="table-responsive">
@@ -79,7 +79,7 @@
                     new PNotify({ title: 'Error', text: 'Blank file is not allowed.', type: 'error', styling: 'bootstrap3' });
                     return;
                 }
-                if (fileExt != "txt" && fileExt != "pdf" && fileExt != "docx" && fileExt != "csv" && fileExt != "jpg" && fileExt != "png") {
+                if (fileExt != "jpg" && fileExt != "png") {
                     new PNotify({ title: 'Error', text: 'File format is not supported. Please choose appropriate file format.', type: 'error', styling: 'bootstrap3' });
                     return;
                 }
