--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -343,7 +343,7 @@
                                     <textarea class="form-control" placeholder="" id="chiefcomplaints"></textarea>
                                 </div>
                             </form>
-                            <p>Add a photo(helpful for rashes, cut, etc)</p>
+                            <p>Add a photo(helpful for rashes, cut, etc). Only jpg and png format are allowed</p>
                             <form id="frmUpload" class="form-inline">
 
                                 <table class="table table-bordered">
@@ -832,12 +832,14 @@
                     if (response.Object.specialities.length == 0) { spec = "N.A"; }
                     if (response.Object.languages.length == 0) { lang = "N.A"; }
                     var doccell = "N.A";
+                    var dochomephone = "N.A";
                     var docemail = "N.A";
                     var cc = "N.A";
                     var docstate = "N.A";
                     var gender = "";
 
-                    if (response.Object.cellPhone != null) { doccell = response.Object.cellPhone; }
+                    if (response.Object.dcellPhone != null) { doccell = response.Object.dcellPhone; }
+                    if (response.Object.dhomePhone != null) { dochomephone = response.Object.dhomePhone; }
                     if (response.Object.email != null) { docemail = response.Object.email; }
                     if (response.Object.consultCharges != null) { cc = response.Object.consultCharges; }
                     if (response.Object.state != null) { docstate = response.Object.state; }
@@ -847,7 +849,8 @@
                              "<br><strong>Specaility: </strong>&nbsp;" + spec +
                              "<br><strong>Languages: </strong>&nbsp;" + lang +
                              "<br><strong>State: </strong>&nbsp;" + docstate +
-                             "<br><strong>Phone: </strong>&nbsp;" + doccell +
+                             "<br><strong>Cell Phone: </strong>&nbsp;" + doccell +
+                           //   "<br><strong>Home Phone: </strong>&nbsp;" + dhomePhone +
                              "<br><strong>Email: </strong>&nbsp; " + docemail +
                              "<br><strong>Consult Charges: </strong>&nbsp; " + cc +
                               "</address>";
@@ -880,6 +883,7 @@
                 else{
                     //Stripe Initialization after getting consultCharges of selected doctor
                     var amount=response.Object.consultCharges*100;
+                    console.log('Consult Charges: '+amount);
                     var oStripePayCheckout = new StripePayCheckout({
                         publisherKey: '@publisherKey',
                         amount: amount,
@@ -889,7 +893,7 @@
                             console.log('Payment Done...');
                             new PNotify({
                                 title: 'Success',
-                                text: "$"+amount/100+" has been  charged successfull.",
+                                text: "$"+amount/100+" has been  charged successfully.",
                                 type: 'info', addclass: 'dark',
                                 styling: 'bootstrap3'
                             });
@@ -897,7 +901,7 @@
                             var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + $("#doctorid").val() + '&message=Patient-paid-successfully';
                             $.post(cCallLogUrl);
                             showLoader();
-                            CreateAppointment(@ViewBag.PatienID,@amount);
+                            CreateAppointment(@ViewBag.PatienID,amount);
                         },
                         handleFailure: function () {
                             var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + $("#doctorid").val() + '&message=Patient-payment-failed';
@@ -1656,7 +1660,7 @@
             //Validate file
             var fileExt = filepath.substring(filepath.lastIndexOf('.') + 1).toLowerCase();
 
-            if (fileExt != "txt" && fileExt != "pdf" && fileExt != "docx" && fileExt != "csv" && fileExt != "jpg" && fileExt != "png") {
+            if (fileExt != "jpg" && fileExt != "png") {
                 new PNotify({ title: 'Error', text: 'File format is not supported. Please choose appropriate file format.', type: 'error', styling: 'bootstrap3' });
                 deSelectFile1();
                 return;
@@ -1700,7 +1704,7 @@
             //Validate file
             var fileExt = filepath.substring(filepath.lastIndexOf('.') + 1).toLowerCase();
 
-            if (fileExt != "txt" && fileExt != "pdf" && fileExt != "docx" && fileExt != "csv" && fileExt != "jpg" && fileExt != "png") {
+            if (fileExt != "jpg" && fileExt != "png") {
                 new PNotify({ title: 'Error', text: 'File format is not supported. Please choose appropriate file format.', type: 'error', styling: 'bootstrap3' });
                 deSelectFile2();
                 return;
@@ -1744,7 +1748,7 @@
             //Validate file
             var fileExt = filepath.substring(filepath.lastIndexOf('.') + 1).toLowerCase();
 
-            if (fileExt != "txt" && fileExt != "pdf" && fileExt != "docx" && fileExt != "csv" && fileExt != "jpg" && fileExt != "png") {
+            if (fileExt != "jpg" && fileExt != "png") {
                 new PNotify({ title: 'Error', text: 'File format is not supported. Please choose appropriate file format.', type: 'error', styling: 'bootstrap3' });
                 deSelectFile3();
                 return;
